--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.fssa.netbliz</groupId>
-  <artifactId>netbliz</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>netbliz</name>
-  <description>money transfer platform and minimum balance tracker</description>
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.fssa.netbliz</groupId>
+	<artifactId>netbliz</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>netbliz</name>
+	<description>money transfer platform and minimum balance tracker</description>
+	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<sonar.projectKey>
+			fssa-batch3/sec_c_dharunraj.alagaruppu__corejava_project_2</sonar.projectKey>
+		<sonar.organization>fssa-batch3</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
-  <dependencies>
+	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.1.2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -73,9 +86,36 @@
 					<version>3.0.0</version>
 				</plugin>
 
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.4</version>
+					<executions>
+						<execution>
+							<id>default-prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>jacoco-report</id>
+							<phase>test</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.9.0.2155</version> <!-- Check for the latest
+					version on the Maven Central repository -->
+				</plugin>
+
 			</plugins>
-			
+
 		</pluginManagement>
-		
+
 	</build>
 </project>
